--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "proxy": "http://localhost:3001/",
+  "engines": {
+    "node": "16.14.2"
+  },
   "dependencies": {
     "@apollo/client": "^3.3.7",
     "@stripe/stripe-js": "^1.38.1",
